change repo path

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dmansurov83/get-in.git"
+    "url": "git+https://github.com/dmansurov83/js-get-in.git"
   },
   "author": "dmansurov83@gmail.com",
   "license": "ISC",
